# sprinter

./: CMakeLists.txt  SprinterConfig.cmake.in  abstractrunner.cpp  abstractrunner.h  runnerhelper.h  runnermanager.cpp  runners.h  simulator.h
docs/: Internal_threading_model.txt  Porting_KRunner_Plugins.txt  Runners.txt  TODO  Using_Sprinter_from_applications.txt  runnerpatterns
lib/: abstractrunner.cpp  abstractrunner.h  querycontext.cpp  querycontext.h  querymatch.cpp  querymatch.h  querysession.cpp  querysession.h  querysession_p.h  querysessionthread_p.cpp  querysessionthread_p.h  runnercontext.cpp  runnercontext.h  runnerhelper.cpp  runnermanager.cpp  runnermanager.h  runnermanager_p.h  runnermanagerthread.cpp  runnermanagerthread.h  runnermanagerthread_p.cpp  runnermanagerthread_p.h  runnermetadata_p.h  runnermodel_p.cpp  runnermodel_p.h  runners.cpp  runnersessiondata.cpp  runnersessiondata.h  runnersessiondata_p.h
qml/: CMakeLists.txt  qmldir  sprinterplugin.cpp  sprinterplugin.h
sprinter/: CMakeLists.txt  abstractrunner.cpp  abstractrunner.h  abstractrunner_p.h  matchdata.cpp  matchdata.h  querycontext.cpp  querycontext.h  querycontext_p.h  querymatch.cpp  querymatch.h  querymatch_p.h  querysession.cpp  querysession.h  querysession_p.h  querysessionthread_p.cpp  querysessionthread_p.h  runner.cpp  runner.h  runner_p.h  runnermetadata_p.h  runnermodel_p.cpp  runnermodel_p.h  runnersessiondata.cpp  runnersessiondata.h  runnersessiondata_p.h
test/: CMakeLists.txt  helper.cpp  helper.h  main.cpp  qmltest.qml  simulator.cpp  simulator.h
